--- a/puppyBowlWorkshop/src/index.css
+++ b/puppyBowlWorkshop/src/index.css
@@ -17,11 +17,8 @@
 
 body {
   margin: 0;
-  /* padding-top: 20px; */
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding-top: 80px;
+  /* display: flex; */
 }
 
 h1 {
