--- a/puppyBowlWorkshop/src/App.css
+++ b/puppyBowlWorkshop/src/App.css
@@ -19,8 +19,9 @@ label {
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: auto;
   display: flex;
+  flex-direction: row;
   align-items: center;
   padding: 10px 20px;
   justify-content: space-between;
@@ -79,29 +80,34 @@ h1 {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.player-card:hover, .single-player-card:hover {
+.player-card:hover,
+.single-player-card:hover {
   transform: scale(1.05);
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
 }
 
-.player-card img, .single-player-card img {
+.player-card img,
+.single-player-card img {
   width: 100%;
   max-height: 300px;
   object-fit: cover;
   border-radius: 10px;
 }
 
-.player-card h4, .single-player-card h4 {
+.player-card h4,
+.single-player-card h4 {
   font-size: 1.4em;
   margin: 10px 0;
 }
 
-.player-card p, .single-player-card p {
+.player-card p,
+.single-player-card p {
   font-size: 1.1em;
   margin: 10px 0;
 }
 
-.player-card button, .single-player-card button {
+.player-card button,
+.single-player-card button {
   margin-top: 10px;
   width: 100%;
   background-color: #a98467;
@@ -114,7 +120,8 @@ h1 {
   transition: background-color 0.3s ease;
 }
 
-.player-card button:hover, .single-player-card button:hover {
+.player-card button:hover,
+.single-player-card button:hover {
   background-color: #987961;
 }
 
@@ -231,4 +238,45 @@ form h2 {
 
 .search-container button:hover {
   background-color: #987961;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+  }
+
+  .title {
+    font-size: 2em;
+    margin-bottom: 10px;
+  }
+
+  .nav-links {
+    width: 100%;
+    justify-content: space-between;
+    margin-right: 0;
+  }
+
+  .nav-links a {
+    flex: 1;
+    text-align: center;
+    padding: 10px 0;
+    margin: 0 5px;
+  }
+
+  .search-container {
+    width: 100%;
+    justify-content: center;
+    margin-top: 10px;
+    margin-right: 0;
+  }
+
+  .search-container input {
+    width: 90%;
+  }
+  .pup-players-heading {
+    top: 65px;
+    position: relative;
+  }
 }
